Use grunt and <srcset>

--- a/main.html
+++ b/main.html
@@ -41,24 +41,24 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-6">
-                    <img class="img-responsive" src="images/img1.jpg" alt="project-img-1" data-toggle="modal" data-target="#project1">
+                    <img class="img-responsive" src="images/img1-800_large_1x.jpg" srcset="images/img1-800_large_1x.jpg 1x, images/img1-1600_large_2x.jpg 2x" alt="project-img-1" data-toggle="modal" data-target="#project1">
                     <h3>Introduction to Programming</h3>
                     <p><a href="http://kinetic-silicon-104012.appspot.com/">Link to project</a></p>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive" src="images/img2.jpg" alt="project-img-2">
+                    <img class="img-responsive" src="images/img2-800_large_1x.jpg" srcset="images/img2-800_large_1x.jpg 1x, images/img2-1600_large_2x.jpg 2x" alt="project-img-2">
                     <h3>Placeholder for a future project</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-6">
-                    <img class="img-responsive" src="images/img3.jpg">
+                    <img class="img-responsive" src="images/img3-800_large_1x.jpg" srcset="images/img3-800_large_1x.jpg 1x, images/img3-1600_large_2x.jpg 2x" alt="project-img-3">
                     <h3>Placeholder for a future project</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive" src="images/img4.jpg" alt="project-img-4">
+                    <img class="img-responsive" src="images/img4-800_large_1x.jpg" srcset="images/img4-800_large_1x.jpg 1x, images/img4-1600_large_2x.jpg 2x" alt="project-img-4">
                     <h3>Placeholder for a future project</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
